--- a/06. 패키지 활용 pyKrev.ipynb
+++ b/06. 패키지 활용 pyKrev.ipynb
@@ -225,10 +225,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 5,
-   "id": "006e57c5",
-=======
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -361,7 +357,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
->>>>>>> 4d2cdfdd640a612b90818ba5692cf0341ce74735
    "metadata": {},
    "outputs": [
     {
@@ -428,16 +423,10 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 8,
-   "id": "8ffa842d",
-   "metadata": {},
-=======
    "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
->>>>>>> 4d2cdfdd640a612b90818ba5692cf0341ce74735
    "outputs": [
     {
      "data": {
@@ -689,7 +678,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
