--- a/실습5 chemcalcAPI + rdkit + pubchempy.ipynb
+++ b/실습5 chemcalcAPI + rdkit + pubchempy.ipynb
@@ -673,7 +673,7 @@
     }
    ],
    "source": [
-    "data = data.sort_values(by = 'error',ascending= True) # 에러가 가장 작은 분자식를 선택해보쟈\n",
+    "data = data.sort_values(by = 'error',ascending= True) # 에러가 가장 작은 분자구조를 선택해보쟈\n",
     "data = data.reset_index(drop = True)\n",
     "mf = data.loc[0,['mf']]\n",
     "mf = mf.values[0]\n",
@@ -938,11 +938,7 @@
     "for var1 in tqdm(df['var1'].values):\n",
     "    data = findMfByMass(var1)\n",
     "    data = pd.DataFrame(data['results'])\n",
-<<<<<<< HEAD
-    "    data = data.sort_values(by = 'error',ascending= True) # 에러가 가장 작은 분자식를 선택해보쟈\n",
-=======
     "    data = data.sort_values(by = 'error',ascending= True) # 에러가 가장 작은 분자구조를 선택해보쟈(절대값이 가장 작은거 X)\n",
->>>>>>> 4d2cdfdd640a612b90818ba5692cf0341ce74735
     "    data = data.reset_index(drop = True)\n",
     "    mf = data.loc[0,['mf']]\n",
     "    mf = mf.values[0]\n",
@@ -2378,350 +2374,6 @@
   },
   {
    "cell_type": "markdown",
-<<<<<<< HEAD
-   "id": "c5cd1b99",
-   "metadata": {},
-   "source": [
-    "#### 3. 분자식에서 나타날 수 있는 분자구조를 찾아보쟈"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "8d8f3c62",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting pubchempy\n",
-      "  Downloading PubChemPy-1.0.4.tar.gz (29 kB)\n",
-      "  Preparing metadata (setup.py): started\n",
-      "  Preparing metadata (setup.py): finished with status 'done'\n",
-      "Building wheels for collected packages: pubchempy\n",
-      "  Building wheel for pubchempy (setup.py): started\n",
-      "  Building wheel for pubchempy (setup.py): finished with status 'done'\n",
-      "  Created wheel for pubchempy: filename=PubChemPy-1.0.4-py3-none-any.whl size=13819 sha256=03e9953f0d755881e371ac0a686c2ae59e5992a488191ab54d645e2de3440ed9\n",
-      "  Stored in directory: c:\\users\\dongkeon\\appdata\\local\\pip\\cache\\wheels\\84\\45\\0e\\b597debba098119b642eaf728ae1883d23ad8ea2a9366f2ded\n",
-      "Successfully built pubchempy\n",
-      "Installing collected packages: pubchempy\n",
-      "Successfully installed pubchempy-1.0.4\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install pubchempy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "1ac734a3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pubchempy as pcp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "dddbe71b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mf = df['mf'][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "d5d81410",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'C3H3NO2'"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "ba9d5a50",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results = pcp.get_compounds(mf, 'formula',as_dataframe = True) # 시간 상단 소요"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "55b27b8e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "97"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(results.isomeric_smiles)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "8e5be41a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "smiles = results.isomeric_smiles.values[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "cc268b5c",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'C(C#N)C(=O)O'"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "smiles"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "0b5bb14d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "smiles_list = []\n",
-    "for mf in df['mf'].values:\n",
-    "    results = pcp.get_compounds(mf, 'formula',as_dataframe = True)\n",
-    "    smiles = results.isomeric_smiles.values[0]\n",
-    "    smiles_list.append(smiles)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "857a577d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['smiles'] = smiles_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "b12ee9aa",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>var1</th>\n",
-       "      <th>var2</th>\n",
-       "      <th>var3</th>\n",
-       "      <th>var4</th>\n",
-       "      <th>var5</th>\n",
-       "      <th>var6</th>\n",
-       "      <th>mf</th>\n",
-       "      <th>smiles</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>85.1014</td>\n",
-       "      <td>16848</td>\n",
-       "      <td>16.6</td>\n",
-       "      <td>643</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>0.0051</td>\n",
-       "      <td>C3H3NO2</td>\n",
-       "      <td>C(C#N)C(=O)O</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>86.0599</td>\n",
-       "      <td>15149</td>\n",
-       "      <td>19.4</td>\n",
-       "      <td>753</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.0057</td>\n",
-       "      <td>C3H2O3</td>\n",
-       "      <td>C1=COC(=O)O1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>87.0438</td>\n",
-       "      <td>18891</td>\n",
-       "      <td>17</td>\n",
-       "      <td>663</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>0.0046</td>\n",
-       "      <td>C2HNO3</td>\n",
-       "      <td>C1=NC(=O)OO1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>88.0755</td>\n",
-       "      <td>15455</td>\n",
-       "      <td>55.3</td>\n",
-       "      <td>2156</td>\n",
-       "      <td>1.1</td>\n",
-       "      <td>0.0057</td>\n",
-       "      <td>C2O4</td>\n",
-       "      <td>C(=O)(C(=O)[O-])[O-]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>89.0593</td>\n",
-       "      <td>17062</td>\n",
-       "      <td>5.5</td>\n",
-       "      <td>215</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>0.0052</td>\n",
-       "      <td>C2H3NO3</td>\n",
-       "      <td>C(=O)(C(=O)O)N</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>89.9639</td>\n",
-       "      <td>16388</td>\n",
-       "      <td>25</td>\n",
-       "      <td>979</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.0055</td>\n",
-       "      <td>C2H2O4</td>\n",
-       "      <td>C(=O)(C(=O)O)O</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>90.055</td>\n",
-       "      <td>16786</td>\n",
-       "      <td>3077.1</td>\n",
-       "      <td>120565</td>\n",
-       "      <td>58.7</td>\n",
-       "      <td>0.0054</td>\n",
-       "      <td>C2H2O4</td>\n",
-       "      <td>C(=O)(C(=O)O)O</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>90.0913</td>\n",
-       "      <td>16209</td>\n",
-       "      <td>6.6</td>\n",
-       "      <td>257</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>0.0056</td>\n",
-       "      <td>C2H2O4</td>\n",
-       "      <td>C(=O)(C(=O)O)O</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>91.058</td>\n",
-       "      <td>15047</td>\n",
-       "      <td>114.3</td>\n",
-       "      <td>4490</td>\n",
-       "      <td>2.2</td>\n",
-       "      <td>0.0061</td>\n",
-       "      <td>CHNO4</td>\n",
-       "      <td>C1=NOOOO1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>92.0606</td>\n",
-       "      <td>16235</td>\n",
-       "      <td>14.8</td>\n",
-       "      <td>584</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>0.0057</td>\n",
-       "      <td>CO5</td>\n",
-       "      <td>C1(=O)OOOO1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      var1   var2    var3    var4  var5    var6       mf                smiles\n",
-       "0  85.1014  16848    16.6     643   0.3  0.0051  C3H3NO2          C(C#N)C(=O)O\n",
-       "1  86.0599  15149    19.4     753   0.4  0.0057   C3H2O3          C1=COC(=O)O1\n",
-       "2  87.0438  18891      17     663   0.3  0.0046   C2HNO3          C1=NC(=O)OO1\n",
-       "3  88.0755  15455    55.3    2156   1.1  0.0057     C2O4  C(=O)(C(=O)[O-])[O-]\n",
-       "4  89.0593  17062     5.5     215   0.1  0.0052  C2H3NO3        C(=O)(C(=O)O)N\n",
-       "5  89.9639  16388      25     979   0.5  0.0055   C2H2O4        C(=O)(C(=O)O)O\n",
-       "6   90.055  16786  3077.1  120565  58.7  0.0054   C2H2O4        C(=O)(C(=O)O)O\n",
-       "7  90.0913  16209     6.6     257   0.1  0.0056   C2H2O4        C(=O)(C(=O)O)O\n",
-       "8   91.058  15047   114.3    4490   2.2  0.0061    CHNO4             C1=NOOOO1\n",
-       "9  92.0606  16235    14.8     584   0.3  0.0057      CO5           C1(=O)OOOO1"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-=======
->>>>>>> 4d2cdfdd640a612b90818ba5692cf0341ce74735
    "id": "35748d01",
    "metadata": {},
    "source": [
@@ -2730,11 +2382,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 35,
-=======
    "execution_count": 81,
->>>>>>> 4d2cdfdd640a612b90818ba5692cf0341ce74735
    "id": "66b6bd20",
    "metadata": {},
    "outputs": [],
@@ -2745,11 +2393,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 36,
-=======
    "execution_count": 228,
->>>>>>> 4d2cdfdd640a612b90818ba5692cf0341ce74735
    "id": "7f71c298",
    "metadata": {},
    "outputs": [],
@@ -2759,11 +2403,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 37,
-=======
    "execution_count": 231,
->>>>>>> 4d2cdfdd640a612b90818ba5692cf0341ce74735
    "id": "6da15714",
    "metadata": {},
    "outputs": [],
@@ -2773,11 +2413,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 38,
-=======
    "execution_count": 232,
->>>>>>> 4d2cdfdd640a612b90818ba5692cf0341ce74735
    "id": "d65eda3b",
    "metadata": {},
    "outputs": [
@@ -2787,11 +2423,7 @@
        "'C(C#N)C(=O)O'"
       ]
      },
-<<<<<<< HEAD
-     "execution_count": 38,
-=======
      "execution_count": 232,
->>>>>>> 4d2cdfdd640a612b90818ba5692cf0341ce74735
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2802,11 +2434,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 39,
-=======
    "execution_count": 238,
->>>>>>> 4d2cdfdd640a612b90818ba5692cf0341ce74735
    "id": "2d9acc6b",
    "metadata": {},
    "outputs": [
@@ -2816,11 +2444,7 @@
        "'C3H3NO2'"
       ]
      },
-<<<<<<< HEAD
-     "execution_count": 39,
-=======
      "execution_count": 238,
->>>>>>> 4d2cdfdd640a612b90818ba5692cf0341ce74735
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2831,11 +2455,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 40,
-=======
    "execution_count": 234,
->>>>>>> 4d2cdfdd640a612b90818ba5692cf0341ce74735
    "id": "0be96769",
    "metadata": {},
    "outputs": [],
@@ -2845,7 +2465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "84da28ca",
    "metadata": {},
    "outputs": [],
@@ -2855,11 +2475,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 42,
-=======
    "execution_count": 241,
->>>>>>> 4d2cdfdd640a612b90818ba5692cf0341ce74735
    "id": "32ea06eb",
    "metadata": {
     "scrolled": true
@@ -2872,11 +2488,7 @@
        "<PIL.PngImagePlugin.PngImageFile image mode=RGB size=300x300>"
       ]
      },
-<<<<<<< HEAD
-     "execution_count": 42,
-=======
      "execution_count": 241,
->>>>>>> 4d2cdfdd640a612b90818ba5692cf0341ce74735
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2887,11 +2499,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 43,
-=======
    "execution_count": 242,
->>>>>>> 4d2cdfdd640a612b90818ba5692cf0341ce74735
    "id": "c18655bb",
    "metadata": {},
    "outputs": [],
@@ -2901,11 +2509,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 44,
-=======
    "execution_count": 243,
->>>>>>> 4d2cdfdd640a612b90818ba5692cf0341ce74735
    "id": "ccf817e6",
    "metadata": {},
    "outputs": [],
