--- a/실습5 chemcalcAPI + rdkit + pubchempy.ipynb
+++ b/실습5 chemcalcAPI + rdkit + pubchempy.ipynb
@@ -384,9 +384,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "5ee7a066",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -950,7 +948,10 @@
    "execution_count": 22,
    "id": "36a03b5e",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [
     {
@@ -2108,9 +2109,7 @@
    "cell_type": "code",
    "execution_count": 219,
    "id": "55b27b8e",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2525,7 +2524,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
